Adding in Priya's comments

--- a/stories/topics/con-saas-automation-mesh.adoc
+++ b/stories/topics/con-saas-automation-mesh.adoc
@@ -4,7 +4,7 @@
 
 {SaaSonAWSShort} provides default “mesh-ingress” hop nodes.
 These hosted hop nodes allow execution nodes to poll for automation work through egress from a customer’s private network, eliminating the need to open inbound firewall ports.
-Mesh ingress hop nodes use port 443 for inbound traffic.
+Hosted hop nodes use port 443 for inbound traffic.
 
 The following is an example of an execution node in a private address space with egress-only internet access connected to {SaaSonAWSShort} through this model.
 
