--- a/stories/topics/con-saas-networking-with-overlapping-CIDR-blocks.adoc
+++ b/stories/topics/con-saas-networking-with-overlapping-CIDR-blocks.adoc
@@ -1,6 +1,6 @@
-[id="con-saas-networking-with-overlapping-CDIR-blocks"]
+[id="con-saas-networking-with-overlapping-CIDR-blocks"]
 
-= Networking with overlapping CDIR blocks
+= Networking with overlapping CIDR blocks
 
 Automation mesh connects the control plane to multiple networks that share the same Classless Inter-Domain Routing (CIDR) block (that is, the same class A address space repeated across different clouds or data centers). 
 Execution nodes regard their deployment network as the local network. You must have at least one execution node instance paired with an instance group to target automation in each network.
