--- a/stories/assembly-saas-post-install-config.adoc
+++ b/stories/assembly-saas-post-install-config.adoc
@@ -3,7 +3,7 @@ ifdef::context[:parent-context: {context}]
 :context: saas-post-install-config
 [id="saas-post-install-config"]
 = Configuring {SaaSonAWS}
-After you subscribe to {SaaSonAWSShort} and gaining access to {PlatformNameShort}, you must configure your automation mesh nodes and set up your automation jobs. 
+After you subscribe to {SaaSonAWSShort} and gain access to {PlatformNameShort}, you must configure your automation mesh nodes and set up your automation jobs. 
 
 For help with configuring your automation mesh see
 link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_mesh_for_managed_cloud_or_operator_environments/index[Automation mesh for managed cloud or operator environments].
