--- a/stories/topics/con-saas-regions.adoc
+++ b/stories/topics/con-saas-regions.adoc
@@ -2,4 +2,5 @@
 
 = Regions and availability zones
 
-Each supported region is paired with a companion AWS region where backup data is stored in the event of a primary region catastrophe that requires restoration in another AWS region. Refer to xref:con-saas-backup-and-diaster-recovery[Backup and diaster recovery] for the list of supported and back up regions.
+Each supported region is paired with a companion AWS region where backup data is stored in the event of a primary region catastrophe that requires restoration in another AWS region.
+Refer to xref:con-saas-backup-and-diaster-recovery[Backup and diaster recovery] for the list of supported and back up regions.
