--- a/stories/topics/con-azure-about.adoc
+++ b/stories/topics/con-azure-about.adoc
@@ -15,5 +15,6 @@ The following Red Hat Automation Platform components are available on {AAPonAzur
 * Ansible Content Collections, including the Microsoft collection for Azure
 * Automation Execution Environment
 * Ansible content tools, including access to {InsightsName}
-* link:{LinkOperatorMesh}
+* link:{BaseURL}/red_hat_ansible_automation_platform/{AzurePlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/index[{TitleOperatorMesh}]
+// * link:{LinkOperatorMesh}
 
