Clouds - SaaS updates from review (#2524)
* Adding in Priya's comments

* typo fix

* level offset

--- a/stories/topics/con-saas-deployment-self-service.adoc
+++ b/stories/topics/con-saas-deployment-self-service.adoc
@@ -4,5 +4,5 @@
 
 You can self-service deployments including, but not limited to, the following operations:
 
-* Creating an {PlatformNameShort} on a AWS environment.
-* Deleting an {PlatformNameShort} on a AWS environment.
+* Buy and deploy an {PlatformNameShort} on a AWS environment.
+* Cancel an {PlatformNameShort} on a AWS environment subscription.
