Revision of hardening guide
Introduction and initial text

Document how to secure and harden AAP

https://issues.redhat.com/browse/AAP-32887

--- a/downstream/assemblies/aap-hardening/assembly-hardening-aap.adoc
+++ b/downstream/assemblies/aap-hardening/assembly-hardening-aap.adoc
@@ -7,7 +7,8 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-This guide takes a practical approach to hardening the {PlatformNameShort} security posture, starting with the planning and architecture phase of deployment and then covering specific guidance for the installation phase. As this guide specifically covers {PlatformNameShort} running on Red Hat Enterprise Linux, hardening guidance for Red Hat Enterprise Linux will be covered where it affects the automation platform components.
+This guide takes a practical approach to hardening the {PlatformNameShort} security posture, starting with the planning and architecture phase of deployment and then covering specific guidance for the installation phase. 
+As this guide specifically covers {PlatformNameShort} running on {RHEL}, hardening guidance for {RHEL} is covered where it affects the automation platform components.
 
 include::aap-hardening/con-planning-considerations.adoc[leveloffset=+1]
 include::aap-hardening/ref-architecture.adoc[leveloffset=+2]
