--- a/downstream/assemblies/aap-hardening/assembly-intro-to-aap-hardening.adoc
+++ b/downstream/assemblies/aap-hardening/assembly-intro-to-aap-hardening.adoc
@@ -12,13 +12,17 @@ This document provides guidance for improving the security posture (referred to 
 
 Other deployment targets, such as OpenShift, are not currently within the scope of this guide. {PlatformNameShort} managed services available through cloud service provider marketplaces are also not within the scope of this guide.
 
-This guide takes a practical approach to hardening the {PlatformNameShort} security posture, starting with the planning and architecture phase of deployment and then covering specific guidance for installation, initial configuration, and day two operations. As this guide specifically covers {PlatformNameShort} running on {RHEL}, hardening guidance for {RHEL} will be covered where it affects the automation platform components. Additional considerations with regards to the Defense Information Systems Agency (DISA) Security Technical Implementation Guides (STIGs) are provided for those organizations that integrate the DISA STIG as a part of their overall security strategy.
+This guide takes a practical approach to hardening the {PlatformNameShort} security posture, starting with the planning and architecture phase of deployment and then covering specific guidance for installation, initial configuration, and day two operations. As this guide specifically covers {PlatformNameShort} running on {RHEL}, hardening guidance for {RHEL} will be covered where it affects the automation platform components. 
+//Additional considerations with regards to the Defense Information Systems Agency (DISA) Security Technical Implementation Guides (STIGs) are provided for those organizations that integrate the DISA STIG as a part of their overall security strategy.
 
 [NOTE]
 ====
-These recommendations do not guarantee security or compliance of your deployment of {PlatformNameShort}. You must assess security from the unique requirements of your organization to address specific threats and risks and balance these against implementation factors.
+These recommendations do not guarantee security or compliance of your deployment of {PlatformNameShort}. 
+You must assess security from the unique requirements of your organization to address specific threats and risks and balance these against implementation factors.
 ====
 
 include::aap-hardening/con-hardening-guide-audience.adoc[leveloffset=+1]
 include::aap-hardening/con-product-overview.adoc[leveloffset=+1]
+
+include::aap-hardening/con-deployment-methods.adoc[leveloffset=+2]
 include::aap-hardening/con-platform-components.adoc[leveloffset=+2]
