--- a/downstream/assemblies/aap-hardening/assembly-hardening-aap.adoc
+++ b/downstream/assemblies/aap-hardening/assembly-hardening-aap.adoc
@@ -18,8 +18,8 @@ include::aap-hardening/ref-dns.adoc[leveloffset=+3]
 include::aap-hardening/ref-dns-load-balancing.adoc[leveloffset=+3]
 include::aap-hardening/ref-ntp.adoc[leveloffset=+3]
 include::aap-hardening/con-user-authentication-planning.adoc[leveloffset=+2]
-include::aap-hardening/ref-automation-controller-authentication.adoc[leveloffset=+3]
-include::aap-hardening/ref-private-automation-hub-authentication.adoc[leveloffset=+3]
+include::aap-hardening/ref-aap-authentication.adoc[leveloffset=+3]
+//include::aap-hardening/ref-private-automation-hub-authentication.adoc[leveloffset=+3]
 include::aap-hardening/con-credential-management-planning.adoc[leveloffset=+2]
 include::aap-hardening/ref-automation-controller-operational-secrets.adoc[leveloffset=+3]
 include::aap-hardening/con-automation-use-secrets.adoc[leveloffset=+3]
@@ -32,11 +32,11 @@ include::aap-hardening/con-install-secure-host.adoc[leveloffset=+2]
 include::aap-hardening/ref-security-variables-install-inventory.adoc[leveloffset=+2]
 include::aap-hardening/proc-install-user-pki.adoc[leveloffset=+2]
 include::aap-hardening/ref-sensitive-variables-install-inventory.adoc[leveloffset=+2]
-include::aap-hardening/con-controller-stig-considerations.adoc[leveloffset=+2]
-include::aap-hardening/proc-fapolicyd.adoc[leveloffset=+3]
-include::aap-hardening/proc-file-systems-mounted-noexec.adoc[leveloffset=+3]
-include::aap-hardening/proc-namespaces.adoc[leveloffset=+3]
-include::aap-hardening/ref-sudo-nopasswd.adoc[leveloffset=+3]
+//include::aap-hardening/con-controller-stig-considerations.adoc[leveloffset=+2]
+//include::aap-hardening/proc-fapolicyd.adoc[leveloffset=+3]
+//include::aap-hardening/proc-file-systems-mounted-noexec.adoc[leveloffset=+3]
+//include::aap-hardening/proc-namespaces.adoc[leveloffset=+3]
+//include::aap-hardening/ref-sudo-nopasswd.adoc[leveloffset=+3]
 include::aap-hardening/ref-initial-configuration.adoc[leveloffset=+1]
 include::aap-hardening/ref-infrastructure-as-code.adoc[leveloffset=+2]
 include::aap-hardening/con-controller-configuration.adoc[leveloffset=+2]
