--- a/downstream/modules/aap-hardening/proc-install-user-pki.adoc
+++ b/downstream/modules/aap-hardening/proc-install-user-pki.adoc
@@ -13,29 +13,39 @@ Use the following inventory variables to configure the infrastructure components
 
 .PKI certificate inventory variables
 |===
-| *Variable* | *Details*
-| `custom_ca_cert` | The file name of the CA certificate located in the installer directory.
+| *RPM Variable* | *Containerized Variable* | *Details*
+| `custom_ca_cert` | | The file name of the CA certificate located in the installer directory.
 
-| `web_server_ssl_cert` | The file name of the {ControllerName} PKI certificate located in the installer directory.
+Defines a custom CA certificate here when you have the leaf certificates created for each product and need the certificate trust to be established.
 
-| `web_server_ssl_key` | The file name of the {ControllerName} PKI key located in the installer directory.
+| `web_server_ssl_cert` | `controller_tls_cert` | The file name of the {ControllerName} PKI certificate located in the installer directory.
 
-| `automationhub_ssl_cert` | The file name of the {PrivateHubName} PKI certificate located in the installer directory.
+| `web_server_ssl_key` | `controller_tls_key` | The file name of the {ControllerName} PKI key located in the installer directory.
 
-| `automationhub_ssl_key` | The file name of the {PrivateHubName} PKI key located in the installer directory.
+| `automationhub_ssl_cert` | `hub_tls_cert` | The file name of the {PrivateHubName} PKI certificate located in the installer directory.
 
-| `postgres_ssl_cert` | The file name of the database server PKI certificate located in the installer directory. This variable is only needed for the installer-managed database server, not if a third-party database is used.
+| `automationhub_ssl_key` | `hub_tls_key` | The file name of the {PrivateHubName} PKI key located in the installer directory.
 
-| `postgres_ssl_key` | The file name of the database server PKI certificate located in the installer directory. This variable is only needed for the installer-managed database server, not if a third-party database is used.
+| `postgres_ssl_cert` | `postgresql_tls_cert` | The file name of the database server PKI certificate located in the installer directory. This variable is only needed for the installer-managed database server, not if a third-party database is used.
 
-| `automationedacontroller_ssl_cert` | The file name of the {EDAcontroller} PKI certificate located in the installer directory.
+| `postgres_ssl_key` | `postgresql_tls_key` | The file name of the database server PKI certificate located in the installer directory. This variable is only needed for the installer-managed database server, not if a third-party database is used.
 
-| `automationedacontroller_ssl_key` | The file name of the {EDAcontroller} PKI key located in the installer directory.
+| `automationedacontroller_ssl_cert` | `eda_tls_cert` | The file name of the {EDAcontroller} PKI certificate located in the installer directory.
+
+| `automationedacontroller_ssl_key` | `eda_tls_key` | The file name of the {EDAcontroller} PKI key located in the installer directory.
 |===
 
-When multiple {ControllerName} are deployed with a load balancer, the `web_server_ssl_cert` and `web_server_ssl_key` are shared by each controller. To prevent hostname mismatches, the certificate's Common Name (CN) must match the DNS FQDN used by the load balancer. This also applies when deploying multiple {PrivateHubName} and the `automationhub_ssl_cert` and `automationhub_ssl_key` variables. If your organizational policies require unique certificates for each service, each certificate requires a Subject Alt Name (SAN) that matches the DNS FQDN used for the load-balanced service. To install unique certificates and keys on each {ControllerName}, the certificate and key variables in the installation inventory file must be defined as per-host variables instead of in the `[all:vars]` section. For example:
+When multiple {ControllerName} are deployed with a load balancer, the `web_server_ssl_cert` and `web_server_ssl_key` are shared by each {ControllerName}. 
+To prevent hostname mismatches, the certificate's Common Name (CN) must match the DNS FQDN used by the load balancer. 
+This also applies when deploying multiple {PrivateHubName} and the `automationhub_ssl_cert` and `automationhub_ssl_key` variables. 
+If your organizational policies require unique certificates for each service, each certificate requires a Subject Alt Name (SAN) that matches the DNS FQDN used for the load-balanced service. 
+To install unique certificates and keys on each {ControllerName}, the certificate and key variables in the installation inventory file must be defined as per-host variables instead of in the `[all:vars]` section. 
+For example:
 
 ----
+[automationgateway]
+gateway0.example.com
+
 [automationcontroller]
 controller0.example.com web_server_ssl_cert=/path/to/cert0 web_server_ssl_key=/path/to/key0
 controller1.example.com web_server_ssl_cert=/path/to/cert1 web_server_ssl_key=/path/to/key1
@@ -47,5 +57,8 @@ controller2.example.com web_server_ssl_cert=/path/to/cert2 web_server_ssl_key=/p
 hub0.example.com automationhub_ssl_cert=/path/to/cert0 automationhub_ssl_key=/path/to/key0
 hub1.example.com automationhub_ssl_cert=/path/to/cert1 automationhub_ssl_key=/path/to/key1
 hub2.example.com automationhub_ssl_cert=/path/to/cert2 automationhub_ssl_key=/path/to/key2
+
+[automationedacontroller]
+automationedacontroller0.example.com
 ----
 
