--- a/downstream/modules/aap-hardening/ref-sensitive-variables-install-inventory.adoc
+++ b/downstream/modules/aap-hardening/ref-sensitive-variables-install-inventory.adoc
@@ -12,18 +12,23 @@ The installation inventory file contains a number of sensitive variables, mainly
 * `cd /path/to/ansible-automation-platform-setup-bundle-2.5-1-x86_64`
 * `ansible-vault create vault.yml`
 
-You will be prompted for a password to the new Ansible vault. Do not lose the vault password because it is required every time you need to access the vault file, including during day-two operations and performing backup procedures. You can secure the vault password by storing it in an encrypted password manager or in accordance with your organizational policy for storing passwords securely.
+You are prompted for a password to the new Ansible vault. 
+Do not lose the vault password because it is required every time you need to access the vault file, including during day-two operations and performing backup procedures. 
+You can secure the vault password by storing it in an encrypted password manager or in accordance with your organizational policy for storing passwords securely.
 
 Add the sensitive variables to the vault, for example:
 
+//Added containerized variables RPM/containerized:
+
 ----
-admin_password: <secure_controller_password>
-pg_password: <secure_db_password>
-automationhub_admin_password: <secure_hub_password>
-automationhub_pg_password: <secure_hub_db_password>
-automationhub_ldap_bind_password: <ldap_bind_password>
-automationedacontroller_admin_password: <secure_eda_password>
-automationedacontroller_pg_password: <secure_eda_db_password>
+admin_password/controller_admin_password: <secure_controller_password>
+pg_password/controller_pg_password: <secure_db_password>
+automationhub_admin_password/hub_admin_password: <secure_hub_password>
+automationhub_pg_password/hub_pg_password: <secure_hub_db_password>
+automationedacontroller_admin_password/eda_admin_password: <secure_eda_password>
+automationedacontroller_pg_password/eda_pg_password: <secure_eda_db_password>
+/gateway_admin_password: <secure_gateway_password>
+/gateway_pg_password:<secure_gateway_db_password>
 ----
 
 Make sure these variables are not also present in the installation inventory file. To use the new Ansible vault with the installer, run it with the command `./setup.sh -e @vault.yml -- --ask-vault-pass`.
