Add attributes for Clouds docs (#2528)

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -426,3 +426,17 @@
 :URLAnalyticsReports: {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/viewing_reports_about_your_ansible_automation_environment
 :LinkAnalyticsReports: {URLAnalyticsReports}[{TitleAnalyticsReports}]
 //
+// Lightspeed branch titles/lightspeed-user-guide
+:TitleLightspeedUserGuide: Red Hat Ansible Lightspeed with IBM watsonx Code Assistant User Guide
+:URLLightspeedUserGuide: {BaseURL}/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant/2.x_latest/html/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant_user_guide
+:LinkLightspeedUserGuide: {URLLightspeedUserGuide}[{TitleLightspeedUserGuide}]
+//
+// Clouds branch titles/aap-on-azure
+:TitleAzureGuide: Red Hat Ansible Automation Platform on Microsoft Azure Guide
+:URLAzureGuide: {BaseURL}/ansible_on_clouds/2.x_latest/html/red_hat_ansible_automation_platform_on_microsoft_azure_guide
+:LinkAzureGuide: {URLAzureGuide}[{TitleAzureGuide}]
+//
+// Clouds branch titles/saas-aws
+:TitleSaaSAWSGuide: Red Hat Ansible Automation Platform Service on AWS
+:URLSaaSAWSGuide: {BaseURL}/ansible_on_clouds/2.x_latest/html/red_hat_ansible_automation_platform_service_on_aws
+:LinkSaaSAWSGuide: {URLSaaSAWSGuide}[{TitleSaaSAWSGuide}]
