Update SaaS title attributes in downstream docs (#2533)

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -437,6 +437,6 @@
 :LinkAzureGuide: {URLAzureGuide}[{TitleAzureGuide}]
 //
 // Clouds branch titles/saas-aws
-:TitleSaaSAWSGuide: Red Hat Ansible Automation Platform Service on AWS
-:URLSaaSAWSGuide: {BaseURL}/ansible_on_clouds/2.x_latest/html/red_hat_ansible_automation_platform_service_on_aws
+:TitleSaaSAWSGuide: Ansible Automation Platform Service on AWS
+:URLSaaSAWSGuide: {BaseURL}/ansible_on_clouds/2.x_latest/html/ansible_automation_platform_service_on_aws
 :LinkSaaSAWSGuide: {URLSaaSAWSGuide}[{TitleSaaSAWSGuide}]
