AAP-30113 Created module based on automation controller topic, install ansible-builder

--- a/downstream/modules/eda/proc-eda-build-a-custom-decision-environment.adoc
+++ b/downstream/modules/eda/proc-eda-build-a-custom-decision-environment.adoc
@@ -29,8 +29,8 @@ Use `de-minimal` as the base image with {Builder} to build your custom decision 
 ====
 * Use the correct {EDAcontroller} decision environment in {PlatformNameShort} to prevent rulebook activation failure.
 
-** If you want to connect {EDAcontroller} to {PlatformNameShort} 2.4, you must use link:hhttp://registry.redhat.io/ansible-automation-platform-24/de-supported-rhel8:latest[{PlatformNameShort} 2.4 supported decision environment]
-** If you want to connect {EDAcontroller} to {PlatformNameShort} {PlatformVers}, you must use link:http://registry.redhat.io/ansible-automation-platform-25/de-supported-rhel8:latest[{PlatformNameShort} {PlatformVers} supported execution environment]
+** If you want to connect {EDAcontroller} to {PlatformNameShort} 2.4, you must use `registry.redhat.io/ansible-automation-platform-24/de-supported-rhel8:latest`
+** If you want to connect {EDAcontroller} to {PlatformNameShort} {PlatformVers}, you must use `registry.redhat.io/ansible-automation-platform-25/de-supported-rhel8:latest`
 ====
 
 The following is an example of the {Builder} definition file that uses `de-minimal` as a base image to build a custom decision environment with the ansible.eda collection:
