--- a/downstream/modules/aap-hardening/proc-configure-centralized-logging.adoc
+++ b/downstream/modules/aap-hardening/proc-configure-centralized-logging.adoc
@@ -5,14 +5,18 @@
 
 = Configure centralized logging
 
-A critical capability of logging is the ability for the {ControllerName} to detect and take action to mitigate a failure, such as reaching storage capacity, which by default shuts down the controller. This guide recommends that the application server be part of a high availability system. When this is the case, {ControllerName} will take the following steps to mitigate failure: 
+A critical capability of logging is the ability for the {ControllerName} to detect and take action to mitigate a failure, such as reaching storage capacity, which by default shuts down {ControllerName}. 
+This guide recommends that the application server be part of a high availability system. 
+When this is the case, {ControllerName} will take the following steps to mitigate failure: 
 
 * If the failure was caused by the lack of log record storage capacity, the application must continue generating log records if possible (automatically restarting the log service if necessary), overwriting the oldest log records in a first-in-first-out manner.
-* If log records are sent to a centralized collection server and communication with this server is lost or the server fails, the application must queue log records locally until communication is restored or until the log records are retrieved manually. Upon restoration of the connection to the centralized collection server, action must be taken to synchronize the local log data with the collection server.
+* If log records are sent to a centralized collection server and communication with this server is lost or the server fails, the application must queue log records locally until communication is restored or until the log records are retrieved manually. 
+Upon restoration of the connection to the centralized collection server, action must be taken to synchronize the local log data with the collection server.
 
 To verify the rsyslog configuration for each {ControllerName} host, complete the following steps for each {ControllerName}:
 
-The administrator must check the rsyslog configuration for each {ControllerName} host to verify the log rollover against a organizationally defined log capture size. To do this, use the following steps, and correct using the configuration steps as required:
+The administrator must check the rsyslog configuration for each {ControllerName} host to verify the log rollover against a organizationally defined log capture size. 
+To do this, use the following steps, and correct using the configuration steps as required:
 
 . Check the `LOG_AGGREGATOR_MAX_DISK_USAGE_GB` field in the {ControllerName} configuration. On the host, execute:
 +
@@ -43,17 +47,19 @@ Note that this change will need to be made on each {ControllerName} in a load-ba
 
 All user session data must be logged to support troubleshooting, debugging and forensic analysis for visibility and analytics. Without this data from the controller’s web server, important auditing and analysis for event investigations will be lost. To verify that the system is configured to ensure that user session data is logged, use the following steps:
 
-For each {ControllerName} host, navigate to console Settings >> System >> Miscellaneous System.
+For each {ControllerName} host, from the navigation panel, select {MenuSetSystem}.
 
 . Click btn:[Edit].
 . Set the following:
-* Enable Activity Stream = On
-* Enable Activity Stream for Inventory Sync = On
-* Organization Admins Can Manage Users and Teams = Off
-* All Users Visible to Organization Admins = On
+* *Enable Activity Stream* = On
+* *Enable Activity Stream for Inventory Sync* = On
+* *Organization Admins Can Manage Users and Teams* = Off
+* *All Users Visible to Organization Admins* = On
 . Click btn:[Save]
 
 To set up logging to any of the aggregator types, read the documentation on link:https://docs.ansible.com/automation-controller/latest/html/administration/logging.html#logging-aggregator-services[supported log aggregators] and configure your log aggregator using the following steps:
+
+include:platform/platform/
 
 . Navigate to {PlatformNameShort}.
 . Click btn:[Settings].
