--- a/downstream/modules/platform/proc-controller-set-up-logging.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-logging.adoc
@@ -1,14 +1,17 @@
 [id="proc-controller-set-up-logging"]
+ifdef::controller-AG[]
 = Setting up logging
 
 Use the following procedure to set up logging to any of the aggregator types.
-
+endif::controller-AG[]
 .Procedure
 . From the navigation panel, select {MenuSetLogging}.
 . On the *Logging settings* page, click btn:[Edit].
+ifndef::controller-AG[]
 +
 image::logging-settings.png[Logging settings page]
 +
+endif::controller-AG[]
 . You can configure the following options:
 
 * *Logging Aggregator*: Enter the hostname or IP address that you want to send logs to.
@@ -21,10 +24,12 @@ However, TCP and UDP connections are determined by the hostname and port number 
 Therefore, in the case of a TCP or UDP connection, supply the port in the specified field.
 If a URL is entered in the *Logging Aggregator* field instead, its hostname portion is extracted as the hostname.
 ====
++
 * *Logging Aggregator Type*: Click to select the aggregator service from the list:
+ifdef::controller-AG[]
 +
 image:configure-controller-system-logging-types.png[Logging types]
-
+endif::controller-AG[]
 * *Logging Aggregator Username*: Enter the username of the logging aggregator if required.
 * *Logging Aggregator Password/Token*: Enter the password of the logging aggregator if required.
 * *Loggers to Send Data to the Log Aggregator Form*: All four types of data are pre-populated by default.
@@ -45,17 +50,22 @@ Equivalent to the `rsyslogd queue.maxdiskspace` setting on the action (e.g. `omh
 It stores files in the directory specified by `LOG_AGGREGATOR_MAX_DISK_USAGE_PATH`.
 * *File system location for rsyslogd disk persistence*: Location to persist logs that should be retried after an outage of the external log aggregator (defaults to `/var/lib/awx`). 
 Equivalent to the `rsyslogd queue.spoolDirectory` setting.
+ifdef::controller-AG[]
 * *Log Format For API 4XX Errors*: Configure a specific error message. For more information, see xref:proc-controller-api-4xx-error-config[API 4XX Error Configuration].
-
+endif::controller-AG[]
+ifdef::hardening[]
+* *Log Format For API 4XX Errors*: Configure a specific error message. For more information, see link:{URLControllerAdminGuide}assembly-controller-logging-aggregation#proc-controller-api-4xx-error-config[API 4XX Error Configuration]
+endif::hardening[]
 Set the following options:
 
 * *Log System Tracking Facts Individually*: Click the tooltip image:question_circle.png[Help,15,15] icon for additional information, such as whether or not you want to turn it on, or leave it off by default.
 
 . Review your entries for your chosen logging aggregation.
+ifdef::controller-AG[]
 The following example is set up for Splunk:
 +
 image:configure-controller-system-logging-splunk-example.png[Splunk logging example]
-
+endif::controller-AG[]
 * *Enable External Logging*: Select this checkbox if you want to send logs to an external log aggregator.
 * *Enable/disable HTTPS certificate verification*: Certificate verification is enabled by default for the HTTPS log protocol.
 Select this checkbox if yoiu want the log handler to verify the HTTPS certificate sent by the external log aggregator before establishing a connection.
