Revision of hardening guide
Modified logging section

Document how to secure and harden AAP

https://issues.redhat.com/browse/AAP-32887

--- a/downstream/modules/aap-hardening/con-rhel-host-planning.adoc
+++ b/downstream/modules/aap-hardening/con-rhel-host-planning.adoc
@@ -12,4 +12,5 @@ For this reason, the underlying {RHEL} hosts for each {PlatformNameShort} compon
 For new deployments, this document recommends {RHEL} 9 for all new deployments. 
 When using the container-based installation method, {RHEL} is required.
 
-Note that applying certain security controls from the STIG or other security profiles may conflict with {PlatformNameShort} support requirements. Some examples are listed in the xref:con-controller-stig-considerations_{context}[{ControllerNameStart} STIG considerations] section, although this is not an exhaustive list. To maintain a supported configuration, be sure to discuss any such conflicts with your security auditors so the {PlatformNameShort} requirements are understood and approved.
+//Note that applying certain security controls from the STIG or other security profiles may conflict with {PlatformNameShort} support requirements. 
+//Some examples are listed in the xref:con-controller-stig-considerations_{context}[{ControllerNameStart} STIG considerations] section, although this is not an exhaustive list. To maintain a supported configuration, be sure to discuss any such conflicts with your security auditors so the {PlatformNameShort} requirements are understood and approved.
