--- a/downstream/assemblies/aap-hardening/assembly-hardening-aap.adoc
+++ b/downstream/assemblies/aap-hardening/assembly-hardening-aap.adoc
@@ -46,6 +46,6 @@ include::aap-hardening/con-external-credential-vault.adoc[leveloffset=+3]
 include::aap-hardening/con-day-two-operations.adoc[leveloffset=+1]
 include::aap-hardening/con-rbac.adoc[leveloffset=+2]
 include::aap-hardening/ref-updates-upgrades.adoc[leveloffset=+2]
-include::aap-hardening/proc-controller-stig-considerations.adoc[leveloffset=+3]
+//include::aap-hardening/proc-controller-stig-considerations.adoc[leveloffset=+3]
 include::aap-hardening/proc-disaster-recovery-operations.adoc[leveloffset=+3]
 
