Adding Red Hat to saas title

--- a/titles/saas-aws/title-attributes.adoc
+++ b/titles/saas-aws/title-attributes.adoc
@@ -1,5 +1,5 @@
 // The name of the title
-:ProjectName: Ansible Automation Platform Service on AWS
+:ProjectName: Red Hat Ansible Automation Platform Service on AWS
 
 :ProjectNameID: saas-aws
 :context: saas-aws
