Revision of hardening guide
Corrected symlink

Document how to secure and harden AAP

https://issues.redhat.com/browse/AAP-32887

--- a/downstream/modules/platform/proc-controller-set-up-logging.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-logging.adoc
@@ -7,7 +7,7 @@ endif::controller-AG[]
 .Procedure
 . From the navigation panel, select {MenuSetLogging}.
 . On the *Logging settings* page, click btn:[Edit].
-ifndef::controller-AG[]
+ifdef::controller-AG[]
 +
 image::logging-settings.png[Logging settings page]
 +
