AAP-32141 Add Installing on Operator chapter to RHDH install guide (#2149) (#2224) (#2539)
* AAP-32141 Add Installing on Operator chapter to RHDH install guide (#2149)

* AAP-32141a Updates to RHDH Install doc (#2224)

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -117,8 +117,9 @@
 // Ansible development tools
 :ToolsName: Ansible development tools
 :AAPRHDH: Ansible plug-ins for Red Hat Developer Hub
+:AAPRHDHShort: Ansible plug-ins
 :RHDH: Red Hat Developer Hub
-:RHDHVers: 1.2
+:RHDHVers: 1.3
 :RHDHShort: RHDH
 :Builder: Ansible Builder
 :Navigator: automation content navigator
