Revision of hardening guide
Added new chapter and modules

Document how to secure and harden AAP

https://issues.redhat.com/browse/AAP-32887

--- a/downstream/modules/aap-hardening/proc-configure-centralized-logging.adoc
+++ b/downstream/modules/aap-hardening/proc-configure-centralized-logging.adoc
@@ -86,14 +86,16 @@ include::platform/proc-controller-set-up-logging.adoc[leveloffset=+2]
 //. Click btn:[Save] to apply the settings or btn:[Cancel] to abandon the changes.
 //. To verify if your configuration is set up correctly, btn:[Save] first then click btn:[Test]. This sends a test log message to the log aggregator using the current logging configuration in the {ControllerName}. You should check to make sure this test message was received by your external log aggregator.
 
-A {ControllerName} account is automatically created for any user who logs in with an LDAP username and password. These users can automatically be placed into organizations as regular users or organization administrators. This means that logging should be turned on when LDAP integration is in use. You can enable logging messages for the SAML adapter the same way you can enable logging for LDAP.
+An {ControllerName} account is automatically created for any user who logs in with an LDAP username and password. These users can automatically be placed into organizations as regular users or organization administrators. 
+This means that logging must be turned on when LDAP integration is in use. 
+You can enable logging messages for the SAML adapter the same way you can enable logging for LDAP.
 
 The following steps enable the LDAP logging:
 
 To enable logging for LDAP, you must set the level to DEBUG in the Settings configuration window.
 
-. Click btn:[Settings] from the left navigation pane and select Logging settings from the System list of options.
-. Click btn:[Edit].
-. Set the Logging Aggregator Level Threshold field to Debug.
+. From the navigation panel, select {MenuSetLogging}.
+. On the *Logging settings* page, click btn:[Edit].
+. Set the *Logging Aggregator Level Threshold* field to Debug.
 . Click btn:[Save] to save your changes.
 
