--- a/downstream/modules/aap-hardening/con-day-two-operations.adoc
+++ b/downstream/modules/aap-hardening/con-day-two-operations.adoc
@@ -7,4 +7,4 @@
 
 [role="_abstract"]
 
-Day 2 Operations include Cluster Health and Scaling Checks, including Host, Project, and environment level Sustainment. You should continually analyze configuration and security drift.
+Day 2 Operations include Cluster Health and Scaling Checks, including Host, Project, and environment level Sustainment. You must continually analyze configuration and security drift.
