--- a/downstream/modules/aap-hardening/con-security-operations-center.adoc
+++ b/downstream/modules/aap-hardening/con-security-operations-center.adoc
@@ -1,6 +1,6 @@
 [id="con-security-operations-center"]
 
-= {PlatformNameStart} as part of a Security Operations Center
+= {PlatformName} as part of a Security Operations Center
 
 Protecting your organization is a critical task. 
 Automating functions of your _Security Operations Center_ (SOC) can help you streamline security operations, response, and remediation activities at scale to reduce the risk and cost of breaches. 
