AAP-30113 Updated title of new chapter, Installing ansible-builder

--- a/downstream/modules/eda/ref-eda-controller-install-builder.adoc
+++ b/downstream/modules/eda/ref-eda-controller-install-builder.adoc
@@ -1,6 +1,6 @@
 [id="eda-controller-install-builder"]
 
-= Install ansible-builder
+= Installing ansible-builder
 
 To build images, you must have Podman or Docker installed, along with the `ansible-builder` Python package. 
 
