AAP-32141 Add Installing on Operator chapter to RHDH install guide (#2149) (#2224) (#2543)
* AAP-32141 Add Installing on Operator chapter to RHDH install guide (#2149)
* AAP-32141a Updates to RHDH Install doc (#2224)

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -114,8 +114,9 @@
 :ToolsName: Ansible development tools
 :Test: Ansible-test
 :AAPRHDH: Ansible plug-ins for Red Hat Developer Hub
+:AAPRHDHShort: Ansible plug-ins
 :RHDH: Red Hat Developer Hub
-:RHDHVers: 1.2
+:RHDHVers: 1.3
 :RHDHShort: RHDH
 :Builder: Ansible Builder
 :Navigator: automation content navigator
