--- a/downstream/titles/aap-plugin-rhdh-install/master.adoc
+++ b/downstream/titles/aap-plugin-rhdh-install/master.adoc
@@ -16,16 +16,30 @@ This document has been updated to include information for the latest release of 
 
 include::{Boilerplate}[]
 
-[IMPORTANT]
-==== 
-{AAPRHDH} is a Technology Preview feature only.
-include::snippets/technology-preview.adoc[]
-==== 
+// [IMPORTANT]
+// ==== 
+// {AAPRHDH} is a Technology Preview feature only.
+// include::snippets/technology-preview.adoc[]
+// ==== 
 
 include::devtools/assembly-rhdh-intro.adoc[leveloffset=+1]
+
+
+// Installation
 include::devtools/assembly-rhdh-install-ocp-helm.adoc[leveloffset=+1]
+include::devtools/assembly-rhdh-install-ocp-operator.adoc[leveloffset=+1]
+//
+// Subscription warnings
 include::devtools/assembly-rhdh-subscription-warnings.adoc[leveloffset=+1]
-include::devtools/assembly-rhdh-upgrade-ocp.adoc[leveloffset=+1]
-include::devtools/assembly-rhdh-uninstall-ocp.adoc[leveloffset=+1]
+//
+// Upgrade
+include::devtools/assembly-rhdh-upgrade-ocp-helm.adoc[leveloffset=+1]
+include::devtools/assembly-rhdh-upgrade-ocp-operator.adoc[leveloffset=+1]
+//
+// Uninstall
+include::devtools/assembly-rhdh-uninstall-ocp-helm.adoc[leveloffset=+1]
+include::devtools/assembly-rhdh-uninstall-ocp-operator.adoc[leveloffset=+1]
+//
+// Telemetry
 include::devtools/assembly-rhdh-telemetry-capturing.adoc[leveloffset=+1]
 
