--- a/downstream/modules/aap-hardening/con-installation.adoc
+++ b/downstream/modules/aap-hardening/con-installation.adoc
@@ -7,4 +7,6 @@
 
 [role="_abstract"]
 
-There are installation-time decisions that affect the security posture of {PlatformNameShort}. The installation process includes setting a number of variables, some of which are relevant to the hardening of the {PlatformNameShort} infrastructure. Before installing {PlatformNameShort}, consider the guidance in the installation section of this guide.
+There are installation-time decisions that affect the security posture of {PlatformNameShort}. 
+The installation process includes setting a number of variables, some of which are relevant to the hardening of the {PlatformNameShort} infrastructure. 
+Before installing {PlatformNameShort}, consider the guidance in the installation section of this guide.
