--- a/downstream/modules/aap-hardening/ref-dns-load-balancing.adoc
+++ b/downstream/modules/aap-hardening/ref-dns-load-balancing.adoc
@@ -12,6 +12,10 @@ When using a load balancer with {PlatformNameShort} as described in the referenc
 For example, if the following hosts are defined in the {PlatformNameShort} installer inventory file:
 
 -----
+[automationgateway]
+gateway0.example.com
+gateway1.example.com
+
 [automationcontroller]
 controller0.example.com
 controller1.example.com
@@ -21,6 +25,11 @@ controller2.example.com
 hub0.example.com
 hub1.example.com
 hub2.example.com
+
+[automationedacontroller]
+edacontroller0.example.com
+edacontroller1.example.com
+edacontroller2.example.com
 -----
 
 Then the load balancer can use the FQDNs `controller.example.com` and `hub.example.com` for the user-facing name of these {PlatformNameShort} services.
