--- a/downstream/assemblies/eda/assembly-eda-decision-environments.adoc
+++ b/downstream/assemblies/eda/assembly-eda-decision-environments.adoc
@@ -2,7 +2,7 @@
 
 = Decision environments
 
-Decision environments are container images to run Ansible Rulebooks.
+Decision environments are a container image to run Ansible Rulebooks.
 They create a common language for communicating automation dependencies, and give a standard way to build and distribute the automation environment.
 You can find the default decision environment in the link:https://quay.io/repository/ansible/ansible-rulebook[Ansible-Rulebook]. 
 
