--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -40,6 +40,8 @@
 :GCP: Google Cloud Platform
 :Azure: Microsoft Azure
 :MSEntraID: Microsoft Entra ID
+:SaaSonAWS: Red Hat Ansible Automation Platform Service on AWS
+:SaaSonAWSShort: Ansible Automation Platform Service on AWS
 
 // Automation Mesh
 :AutomationMesh: automation mesh
