AAP 32543 Clouds - Add Service uptime section in SaaS

--- a/attributes/attributes.adoc
+++ b/attributes/attributes.adoc
@@ -11,6 +11,10 @@
 :AnsibleCoreVers: 2.13
 :BaseURL: https://docs.redhat.com/en/documentation
 
+// Event-Driven Ansible
+:EDAName: Event-Driven Ansible
+:EDAcontroller: Event-Driven Ansible controller
+
 // AAP on Clouds
 :AAPonAzureName: Red Hat Ansible Automation Platform on Microsoft Azure
 :AAPonAzureNameShort: Ansible Automation Platform on Microsoft Azure
