--- a/stories/topics/con-saas-automation.adoc
+++ b/stories/topics/con-saas-automation.adoc
@@ -3,10 +3,12 @@
 
 The {SaaSonAWS} offers a deployment of {PlatformNameShort} deployment purchased through AWS Marketplace. Red{nbsp}Hat configures and provisions an {PlatformNameShort}. The Red{nbsp}Hat team handles the setup and maintenance of the {PlatformNameShort}, ensuring reliability and security.
 
-While Red{nbsp}Hat manages the control plane, the execution plane is spread across your domains using automation mesh hop nodes and execution nodes. For help with configuring execution nodes see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_mesh_for_managed_cloud_or_operator_environments/index[Automation mesh for managed cloud or operator environments].
+While Red{nbsp}Hat manages the control plane, the execution plane is spread across your domains using automation mesh hop nodes and execution nodes.
+For help with configuring execution nodes see
+_link:{LinkOperatorMesh}_.
 
 There are two ways to configure the communication between control nodes and execution nodes:
 
-* The mesh egress model, also known as PULL connectivity (recommended)
-* The mesh ingress model, also known as PUSH connectivity  
+* The PULL connectivity model (recommended)
+* The PUSH connectivity model
 
