--- a/stories/topics/con-saas-backup-and-diaster-recovery.adoc
+++ b/stories/topics/con-saas-backup-and-diaster-recovery.adoc
@@ -1,5 +1,5 @@
 [id="con-saas-backup-and-diaster-recovery"]
-= Backup and diaster recover
+= Backup and disaster recovery
 
 Red{nbsp}Hat maintains daily database and file system snapshots in a separate region from each deployment.  
 
