--- a/stories/topics/con-saas-control-plane.adoc
+++ b/stories/topics/con-saas-control-plane.adoc
@@ -5,6 +5,7 @@ The {PlatformNameShort} control plane includes the application UIs, APIs, compon
 Red{nbsp}Hat manages these within its own infrastructure.
 
 include::con-saas-customer-access.adoc[leveloffset=+1]
+include::con-saas-service-uptime.adoc[leveloffset=+1]
 include::con-saas-sre-access-and-management.adoc[leveloffset=+1]
 include::con-saas-backup-and-diaster-recovery.adoc[leveloffset=+1]
 include::con-saas-infastructure-monitoring.adoc[leveloffset=+1]
