--- a/stories/topics/con-saas-hosted-components.adoc
+++ b/stories/topics/con-saas-hosted-components.adoc
@@ -1,7 +1,8 @@
 [id="con-saas-hosted-components"]
 = Hosted components
 
-The objective of this offering is to provide a {PlatformNameShort} deployment as a managed service, relieving customers of managing the {PlatformNameShort} control plane.
+The objective of this offering is to provide an {PlatformNameShort} deployment as a managed service,
+relieving customers of managing the {PlatformNameShort} control plane.
 Unless specified otherwise, all {PlatformNameShort} capabilities in the operator-based deployment model are supported.
 
 [cols=2*]
@@ -10,6 +11,6 @@ Unless specified otherwise, all {PlatformNameShort} capabilities in the operator
 |Availability plans
 
 |Event-Driven Ansible
-|Event-Driven Ansible (EDA) is planned to be offered as a part of this service, but not at the initial release. 
+|This service does not offer {EDAName} directly, but you can deploy a self-managed instance of {EDAName} that can be used with the service.
 
 |===
