--- a/stories/topics/con-saas-identity-and-access-management.adoc
+++ b/stories/topics/con-saas-identity-and-access-management.adoc
@@ -3,8 +3,11 @@
 
 {PlatformNameShort} includes a built-in user model for configuring users and RBAC permissions that define access. 
 Red{nbsp}Hat recommends using an enterprise identity provider with {PlatformNameShort} to implement multi-factor authentication for users.
-See the link:{BaseURL}/red_hat_ansible_automation_platform/2.4/html/automation_controller_administration_guide/controller-set-up-enterprise-authentication[Setting up enterprise authentication] section of {PlatformNameShort} documentation for a configuration guide.
+See the
+link:{LinkCentralAuth}
+guide for more information.
 [NOTE]
 ====
 Red{nbsp}Hat advises keeping at least one local administrator account with a long, complex password for emergency access.
 ====
+
