--- a/stories/assembly-saas-pull-push.adoc
+++ b/stories/assembly-saas-pull-push.adoc
@@ -4,13 +4,14 @@ ifdef::context[:parent-context: {context}]
 [id="saas-pull-push"]
 = {SaaSonAWS} PULL and PUSH models
 
-You can configure communication between control nodes and execution nodes using one of the following models:
-
-* The PULL connectivity model (recommended)
-* The PUSH connectivity model 
+// You can configure communication between control nodes and execution nodes using one of the following models:
+// 
+// * The PULL connectivity model (recommended)
+// * The PUSH connectivity model 
 
 //[gmurray] this module seems to duplicate the introduction so commenting out for now while I confirm it's not needed
-//include::topics/con-saas-automation.adoc[leveloffset=+1]
+// [ariordan] Added it back in per PR review coments - removed duplicated section from 1st chapter.
+include::topics/con-saas-automation.adoc[leveloffset=+1]
 include::topics/ref-saas-egress-model.adoc[leveloffset=+1]
 include::topics/ref-saas-mesh-ingress-model.adoc[leveloffset=+1]
 
