--- a/stories/topics/con-saas-deployment-self-service.adoc
+++ b/stories/topics/con-saas-deployment-self-service.adoc
@@ -4,5 +4,6 @@
 
 You can self-service deployments including, but not limited to, the following operations:
 
-* Buy and deploy an {PlatformNameShort} on a AWS environment.
-* Cancel an {PlatformNameShort} on a AWS environment subscription.
+* Buy and deploy an {PlatformNameShort} on AWS environment.
+* Cancel an {PlatformNameShort} on AWS environment subscription.
+
